--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,8 @@
 .nav {
 	position: relative;
 	background-image: linear-gradient(-70deg, #061c31,#c2aab1,#061c31);
-	height: 150px;
+	height: 50px;
+		font-size:20px;
 	box-sizing: border-box;
 	padding: 10px 80px;
 	display: flex;
@@ -82,7 +83,8 @@ h1 {
 
 .movie-app > .row {
 	margin: 50px;
-	overflow-x: auto;
+	overflow-x: scroll;
+	overflow-y: hidden;
 	flex-wrap: nowrap;
 }
 
@@ -105,7 +107,7 @@ h1 {
 	flex-direction: column;
 	flex-wrap: nowrap;
 	align-items: center;
-	margin: 30px;
+	margin-top: 30px;
 }
 .image-container {
 	position: relative;
